--- a/pug/beranda.pug
+++ b/pug/beranda.pug
@@ -19,7 +19,7 @@ block isi
 								.progress-bar.progress-upload
 						.form-group
 							.alert.alert-warning.info-file
-				.from-group
+				.form-group
 					a.btn.btn-warning(href='/logout.php') Keluar
 			.col-sm-9
 				table.table.table-bordered
